--- a/spin/src/index.html
+++ b/spin/src/index.html
@@ -5,25 +5,36 @@
     <meta charset="UTF-8" />
     <title>The Extraction - Game</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
     <!-- partial:index.partial.html -->
-    <!-- <div class="spinner">
+    <div class="spinner" id="hidespin">
         <div class="spinner__body"></div>
         <button class="spinner__start-button">GO!</button>
         <input type="number" min="0" , max="999" class="spinner__input" value="10" />
         <div class="spinner__plate">
-            <div class="spinner__item spinner__item--top">?</div>
-            <div class="spinner__item spinner__item--right">?</div>
-            <div class="spinner__item spinner__item--bottom">?</div>
-            <div class="spinner__item spinner__item--left">?</div>
+            <div class="spinner__item spinner__item--top">1</div>
+            <div class="spinner__item spinner__item--right">2</div>
+            <div class="spinner__item spinner__item--bottom">3</div>
+            <div class="spinner__item spinner__item--left">4</div>
         </div>
-    </div> -->
-
-    <div class="popup">test</div>
+    </div>
     <!-- partial -->
+
+    <div class="popup" id="popup">
+        <img src="/spin/img/star.png" alt="" />
+        <h2>ยินดีด้วยคุณได้รางวัล!!</h2>
+        <div id="reward">
+            <p></p>
+            <img src="" alt="">
+        </div>
+        <button type="button" onclick="closePopup()">OK</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 
