Fix img and test run

--- a/spin/src/index.html
+++ b/spin/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container-fluid">
-            <img src="/spin/img/LOGOใหม่-FINISH.png" alt="" class="logo">
+            <img src="/spin/src/img/LOGOใหม่-FINISH.png" alt="" class="logo">
         <div class="spinner" id="hidespin">
             <div class="spinner__body"></div>
             <button class="spinner__start-button">GO!</button>
@@ -31,7 +31,7 @@
         <!-- partial -->
     
         <div class="popup" id="popup">
-            <img src="/spin/img/star.png" alt="" />
+            <img src="/spin/src/img/star.png" alt="" />
             <h2>ยินดีด้วยคุณได้รางวัล!!</h2>
             <div id="reward">
                 <h3></h3>
