--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
     <div class="container-fluid">
-            <img src="/spin/src/img/LOGOใหม่-FINISH.png" alt="" class="logo">
+            <img src="./img/LOGOใหม่-FINISH.png" alt="" class="logo">
         <div class="spinner" id="hidespin">
             <div class="spinner__body"></div>
             <button class="spinner__start-button">GO!</button>
@@ -31,7 +31,7 @@
         <!-- partial -->
     
         <div class="popup" id="popup">
-            <img src="/spin/src/img/star.png" alt="" />
+            <img src="./img/star.png" alt="" />
             <h2>ยินดีด้วยคุณได้รางวัล!!</h2>
             <div id="reward">
                 <h3></h3>
@@ -42,7 +42,7 @@
     </div>
     <!-- partial:index.partial.html -->
     
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
